--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200&display=swap" rel="stylesheet"> 
 </head>
 <body>
-  <header></header>
+  <header class="header"><a href="http://127.0.0.1:5500/grid.html">CSS GRID</a></header>
   <main>
     <div class="box-container">
         <div class="box box1">
